# CivicFlow

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  render.yaml  requirements.txt
artifacts/: metrics.json  model_card.json  stage_a_classifier.joblib  stage_b_regressor.joblib
civicflow/: api.py  cleaning.py  cli.py  config.py  contractor.py  features.py  model.py
civicflow/agent/: checklist.py  extract.py  requirements.py
examples/: permit_new_building.json  permit_solar.json
frontend/: README.md  eslint.config.mjs  package-lock.json  package.json  proxy.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/[...path]/: route.ts
frontend/app/api/login/: route.ts
frontend/app/login/: page.tsx
frontend/components/: CheckReport.tsx  DropZone.tsx  PermitForm.tsx  PredictResult.tsx
frontend/lib/: api.ts  auth.ts  types.ts
models/: encoders.joblib
