[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "civicflow"
version = "0.1.0"
description = "Honolulu permit delay predictor and requirements agent (B2G SaaS MVP)"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
    "scikit-learn>=1.4.0",
    "xgboost>=2.0.0",
    "joblib>=1.3.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "openai>=1.30.0",
    "pdf2image>=1.17.0",
    "Pillow>=10.0.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",
]

[project.scripts]
civicflow = "civicflow.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["civicflow*"]
